--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,42 +1,33 @@
-name: Update Dynamic README
-
+name: "Update Documentation"
 on:
-  push:
-    branches: [ main, master ] # Triggers on either main or master
-  workflow_dispatch:           # Allows you to run it manually for testing
+  workflow_run:
+    workflows: ["Production Deployment"]
+    types: [completed]
 
 jobs:
-  build:
+  update-docs:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
+      
       - name: Inject Dynamic Data
         run: |
           GITHUB_USER="${{ github.repository_owner }}"
           REPO_URL="${{ github.server_url }}/${{ github.repository }}"
-          
-          # Fetch LinkedIn URL from GitHub Profile Socials
           LINKEDIN_URL=$(curl -s https://api.github.com/users/$GITHUB_USER/social_accounts | jq -r '.[] | select(.url | contains("linkedin.com")) | .url')
 
-          # Replace all placeholders in one go
           sed -i "s|{{REPO_NAME}}|${{ github.repository }}|g" README.template.md
           sed -i "s|{{REPO_URL}}|$REPO_URL|g" README.template.md
           sed -i "s|{{LINKEDIN_URL}}|$LINKEDIN_URL|g" README.template.md
           
           mv README.template.md README.md
-
-      - name: Commit and push changes
-        run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add README.md
           
-          # Only commit if there are actually changes to avoid errors
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "docs: sync readme with current repository path"
-            git push
-          fi
+      - name: Commit Changes
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add README.md
+          git commit -m "docs: automated readme update" || echo "No changes to commit"
+          git push
