--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,11 +22,16 @@ jobs:
       - name: Get Region from Terraform
         id: get_region
         run: |
-          # Use terraform console to safely extract the default value of the variable
-          REGION=$(echo 'var.aws_region' | terraform console)
-          # Remove any potential quotes from the output
-          REGION=$(echo $REGION | tr -d '"')
+          # Uses awk to find the variable block and extract the default value regardless of spacing
+          REGION=$(awk '/variable "aws_region"/, /}/' variables.tf | grep "default" | cut -d'"' -f2 | tr -d '[:space:]')
+          
+          if [ -z "$REGION" ]; then
+            echo "❌ Error: Could not find default aws_region in variables.tf"
+            exit 1
+          fi
+          
           echo "AWS_REGION=$REGION" >> $GITHUB_ENV
+          echo "Detected Region: $REGION"
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
