--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -77,3 +77,5 @@ jobs:
         run: |
           chmod +x ./scripts/health-check.sh
           ./scripts/health-check.sh
+        env:
+          AWS_REGION: ${{ env.AWS_REGION }}
