--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,45 @@
 name: "Infrastructure CI"
 on:
   pull_request:
+    paths-ignore:
+      - 'README.md'
+      - 'README.template.md'
+      - 'update-readme.yml'
+      - '.gitignore'
+      - 'assets/**'
     branches:
       - main
 
 jobs:
   terraform-ci:
-    name: "Lint & Security"
+    name: "Infrastructure CI"
     runs-on: ubuntu-latest
+    environment: prod
     permissions:
       id-token: write
-      contents: read
+      contents: write
       pull-requests: write 
-    env:
-      TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        # Add this step back to install the terraform command
+        
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
           terraform_wrapper: true # Required to capture plan output
 
-      - name: Terraform Format Check
-        run: terraform fmt -check
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check -recursive
 
-      - name: Terraform Init & Validate
+      - name: Terraform Init
         run: |
           terraform init
+          terraform validate
+
+      - name: Terraform Validate
+        run: |
           terraform validate
 
       - name: tfsec Security Scan
