--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main  # Trigger only when changes are merged into main
+    paths: 
+      - 'README.template.md'       # Trigger when you change the layout
+      - '**.tf'                    # Trigger when infrastructure outputs change
+      - '.github/workflows/update-readme.yml' # Trigger when you fix the script
   workflow_dispatch: # Allows you to still run it manually for testing
 
 jobs:
@@ -18,16 +22,18 @@ jobs:
       - name: Inject Dynamic Data
         run: |
           GITHUB_USER="${{ github.repository_owner }}"
+          
+          # Fetch LinkedIn from GitHub Profile - Ensuring the variable name matches the sed command below
+          LINKEDIN=$(curl -s https://api.github.com/users/$GITHUB_USER/social_accounts | jq -r '.[] | select(.url | contains("linkedin.com")) | .url')
+          
           REPO_URL="${{ github.server_url }}/${{ github.repository }}"
-          # Fetch LinkedIn from GitHub Profile
-          LINKEDIN_URL=$(curl -s https://api.github.com/users/$GITHUB_USER/social_accounts | jq -r '.[] | select(.url | contains("linkedin.com")) | .url')
+          REPO_NAME="${{ github.repository }}"
 
           # Replace placeholders in the template
-          sed -i "s|{{REPO_NAME}}|${{ github.repository }}|g" README.template.md
+          sed -i "s|{{REPO_NAME}}|$REPO_NAME|g" README.template.md
           sed -i "s|{{REPO_URL}}|$REPO_URL|g" README.template.md
-          sed -i "s|{{LINKEDIN_URL}}|$LINKEDIN_URL|g" README.template.md
+          sed -i "s|{{LINKEDIN_URL}}|$LINKEDIN|g" README.template.md
           
-          # Overwrite the main README
           mv README.template.md README.md
           
       - name: Commit Changes
