add terraform init step as required

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,9 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
           terraform_wrapper: false # Recommended for cleaner script output
 
+      - name: Terraform Init
+        run: terraform init
+
       - name: Fetch Outputs from Terraform
         id: vars
         run: |
