--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,11 @@
 name: "Production Deployment"
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch: # Allows manual trigger after you approve TFC
 
 jobs:
-  deploy:
+  wait-and-deploy:
     runs-on: ubuntu-latest
     environment: prod
     permissions:
@@ -18,6 +20,15 @@ jobs:
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
           terraform_wrapper: false # Recommended for cleaner script output
+
+      - name: Wait for TFC Apply
+        uses: binxio/tfe-run-wait-action@v1
+        with:
+          token: ${{ secrets.TF_API_TOKEN }}
+          organization: "my-terraform-aws-projects-2025"
+          workspace: "AWS-Cloud-Fun-Facts-Generator"
+          # This step will 'hang' and stream TFC logs to GitHub
+          # It only moves to the next step once TFC is 'Applied'
 
       - name: Terraform Init
         run: terraform init
