--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,7 @@ on:
       - "lambda/**"                 # Backend logic updates
       - "frontend/**"               # UI and website file changes
       - ".github/workflows/cd.yml"  # Updates to the deployment logic itself
+      - 'scripts/**'                # Helper script changes
   workflow_dispatch: # Allows manual trigger after you approve TFC
 
 jobs:
