--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -103,6 +103,5 @@ jobs:
           ./scripts/health-check.sh
         env:
           AWS_REGION: ${{ env.AWS_REGION }}
-          # Force HTTPS prefix for the script
-          SITE_URL: "https://${{ env.SITE_URL }}"
+          SITE_URL: ${{ env.SITE_URL }}
           API_URL: ${{ env.API_URL }}
